--- a/Pandas/05_Grab_Row_Point_Subset.ipynb
+++ b/Pandas/05_Grab_Row_Point_Subset.ipynb
@@ -96,8 +96,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1734aebe-a5d4-4a41-8f9a-cdc4140228fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Breed       BELG MALINOIS\n",
+       "Color             BRINDLE\n",
+       "DogName              EICH\n",
+       "OwnerZip            15238\n",
+       "Name: 2, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Grab row method 1 location\n",
+    "my_df.loc[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b175731e-d9db-4ea6-9a24-a5ef570aaf29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Breed             MIXED\n",
+       "Color       BLACK/BROWN\n",
+       "DogName           ARROW\n",
+       "OwnerZip          15104\n",
+       "Name: 3, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# method 2: using index location\n",
+    "my_df.iloc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6639712e-08e5-4383-a7b7-f5a51ffd9570",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TACODA'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# specific points (row and column)\n",
+    "# my_df.loc('Row', 'Column')\n",
+    "my_df.loc[1, \"DogName\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e7eeee19-f4e4-4543-878f-7392a4898b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DogName</th>\n",
+       "      <th>Breed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TACODA</td>\n",
+       "      <td>GER SHEPHERD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ARROW</td>\n",
+       "      <td>MIXED</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  DogName         Breed\n",
+       "1  TACODA  GER SHEPHERD\n",
+       "3   ARROW         MIXED"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for more than one specific points\n",
+    "# my_df.loc[[Row, Row], [Column, Column]]\n",
+    "my_df.loc[[1, 3], [\"DogName\", \"Breed\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea9120a-4e5f-4aaa-87cb-93b7d829afee",
    "metadata": {},
    "outputs": [],
    "source": []
